--- a/core/src/components/label/label.scss
+++ b/core/src/components/label/label.scss
@@ -12,6 +12,8 @@
 
   display: block;
 
+  flex-grow: 1;
+
   color: var(--color);
 
   font-family: $font-family-base;
